Fixed Gallery Overflow On Desktop

--- a/app/src/Framework/Components/Image-Gallery/imagegallery.scss
+++ b/app/src/Framework/Components/Image-Gallery/imagegallery.scss
@@ -38,7 +38,9 @@
     }
 
     @include media('large') {
-        margin-left: -3rem;
-        margin-right: -3rem;
+        &__inner {
+            margin-left: -3rem;
+            margin-right: -3rem;
+        }
     }
 }
